# web-agents

./: .gitignore  Cargo.toml  README.md
docs/src/: SUMMARY.md  architecture.md  configuration.md  conversation-engine.md  index.md  python-runtimes.md  runs-and-audit.md  security-and-http-policy.md  startup-and-ui.md
metrics/: README.md  overview_chat.sqlite
src/: adk_integration.rs  agent_conversation_loop.rs  app.rs  conversation_loop.rs  event_ledger.rs  http_client.rs  lib.rs  main.rs  python_runtime.rs  reproducibility.rs  vault.rs
src/agents/: agent_conversation_loop.rs  conversation_sidecars.rs  mod.rs
src/agents/nodes_panel/: mod.rs  model.rs  run_graph.rs  state.rs
src/app/: nodes_panel.rs  settings_panel.rs
src/metrics/: mod.rs
src/ollama/: client.rs  mod.rs
src/tracing/: mod.rs
src/ui/: mod.rs  python_panel.rs
src/ui/nodes_panel/: render.rs
src/ui/overview_chat/: chat.rs  mod.rs  ollama.rs  store.rs
src/ui/overview_chat/store/: schema.rs
src/web/: mod.rs
