[package]
name = "ams-agents"
description = "A multi-agent dashboard application in Rust"
version = "0.1.0"
edition = "2024"

[dependencies]

eframe = "0.33"
egui = "0.33"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
egui-phosphor = "0.11.0"
egui-snarl = { path = "crates/egui-snarl" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
adk-agent = "0.3.2"
adk-model = { version = "0.3.2", features = ["ollama"] }
adk-runner = "0.3.2"
adk-session = "0.3.2"
adk-core = "0.3.2"
anyhow = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.9"